--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
     background-image: linear-gradient( rgb(3, 0, 56) 0%, rgba(41,9,121,1) 31%, rgba(0,167,255,1) 100%);
     color: aliceblue;
     font-family: sans-serif;
+    font-size: 16px;
 }
 #info-container{
     width: 50%;
