--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,30 @@
 }
 body{
     height: 100vh;
-    background-image: linear-gradient( rgb(3, 0, 56) 0%, rgba(41,9,121,1) 31%, rgba(0,167,255,1) 100%);
     color: aliceblue;
     font-family: sans-serif;
     font-size: 16px;
+    background-image: linear-gradient(45deg, rgb(3, 0, 56) 0%, rgba(41,9,121,1) 61%, rgb(2, 137, 210) 100%);
+    background-size: 300%;
+    animation: bg-animation 18s infinite alternate;
 }
+@keyframes bg-animation {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
+}
+
 #info-container{
     width: 50%;
-    margin: 5rem auto auto;
+    margin: 25% auto auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-radius: 1rem;
+    border: 1px solid;
+    padding: 2rem;
 }
