--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*
+/* 
   1. Use a more-intuitive box-sizing model.
 */
 *, *::before, *::after {
@@ -74,7 +74,6 @@ body{
         background-position: right;
     }
 }
-
 #info-container{
     background-color: aliceblue;
     width: 60%;
@@ -101,13 +100,36 @@ h1{
     font-weight: 700;
     letter-spacing: .0125em;
 }
+.contact-buttons-container{
+  margin-top: .5em;
+  width: 30%;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+i{
+  font-size: 2em;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 66%, #FFCC70 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-size: 300%;
+  animation: bg-animation 18s infinite alternate;
+}
+@media screen and (width < 400px){
+  .contact-buttons-container{
+    flex-direction: column;
+    margin-top: 1em;
+  }
+}
 h2{
-    margin-top: 1rem;
+    margin-top: 1.5em;
     font-size: 1.4em;
     font-weight: 600;
     font-style: italic;
 }
-ul{
+.links-container{
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
@@ -116,7 +138,7 @@ ul{
     padding: 0;
     width: 100%;
 }
-li{
+.links{
     padding: 1em;    
     margin: 1em 0;
     width: 100%;
@@ -126,10 +148,10 @@ li{
     cursor: pointer;
     transition: 300ms;
 }
-li:hover{
+.links:hover{
     box-shadow: rgba(200, 80, 192, 0.5) 0px 6px 10px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-a{  
+.hyperlinks{  
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     background-size: 0% 3px;
     background-repeat: no-repeat;
@@ -137,10 +159,10 @@ a{
     transition: 600ms;
     font-size: 1.2em;
 }
-a:hover{
+.hyperlinks:hover{
         background-size: 100% 3px;
 }
 /* temporal */
-img{
+#logo{
     display: none;
 }
