--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,11 @@ i{
   color: transparent;
   background-size: 300%;
   animation: bg-animation 18s infinite alternate;
-  transition: 500ms;
+  transition: 700ms;
 }
 i:hover{
   box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px;
+  font-size: 2.2em;
 }
 @media screen and (width < 400px){
   .contact-buttons-container{
@@ -164,7 +165,8 @@ h2{
     font-size: 1.2em;
 }
 .hyperlinks:hover{
-        background-size: 100% 3px;
+    background-size: 100% 3px;
+    font-size: 1.240em;
 }
 /* temporal */
 #logo{
